// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button custom bg 1`] = `
.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: #7280ed;
  color: #ffffff;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: .125s box-shadow ease-out;
  transition: .125s box-shadow ease-out;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
  border-radius: 4px;
  border-width: 0;
  border-style: solid;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 12px 2px rgba(0,0,0,0.125);
}

.c0:active {
  outline: 0;
  box-shadow: 0 4px 16px 2px rgba(0,0,0,0.125);
}

<a
  className="c0"
  color="white"
/>
`;

exports[`Button disabled prop sets 1`] = `
.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: #e42d42;
  color: #ffffff;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: .125s box-shadow ease-out;
  transition: .125s box-shadow ease-out;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
  border-radius: 4px;
  border-width: 0;
  border-style: solid;
  opacity: 0.25;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 12px 2px rgba(228,45,66,.25);
}

.c0:active {
  outline: 0;
  box-shadow: 0 4px 16px 2px rgba(228,45,66,.375);
}

<a
  className="c0"
  color="white"
  disabled={true}
/>
`;

exports[`Button inverted 1`] = `
.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: #7280ed;
  color: #ffffff;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: .125s box-shadow ease-out;
  transition: .125s box-shadow ease-out;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
  border-radius: 4px;
  border-width: 0;
  border-style: solid;
  background-color: #ffffff;
  color: #7280ed;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 12px 2px rgba(0,0,0,0.125);
}

.c0:active {
  outline: 0;
  box-shadow: 0 4px 16px 2px rgba(0,0,0,0.125);
}

<a
  className="c0"
  color="white"
/>
`;

exports[`Button renders 1`] = `
.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: #e42d42;
  color: #ffffff;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: .125s box-shadow ease-out;
  transition: .125s box-shadow ease-out;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
  border-radius: 4px;
  border-width: 0;
  border-style: solid;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 12px 2px rgba(228,45,66,.25);
}

.c0:active {
  outline: 0;
  box-shadow: 0 4px 16px 2px rgba(228,45,66,.375);
}

<a
  className="c0"
  color="white"
/>
`;

exports[`Button without disabled prop sets 1`] = `
.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: #2de473;
  color: #ffffff;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: .125s box-shadow ease-out;
  transition: .125s box-shadow ease-out;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
  border-radius: 4px;
  border-width: 0;
  border-style: solid;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 12px 2px rgba(0,0,0,0.125);
}

.c0:active {
  outline: 0;
  box-shadow: 0 4px 16px 2px rgba(0,0,0,0.125);
}

<a
  className="c0"
  color="white"
/>
`;
